# PetshopAPIPython

./: .gitignore  AzuriteConfig  Dockerfile  README.md  main.py  requirements.txt
azure_functions/: Dockerfile  function_app.py
chromadb_test/: main.py  requirements.txt
data/: sales.csv
datageneratorapp/: chromadbtest.py  main.py  monthlyproductsales.py  monthlysales.py  monthlysalesbyuser.py  one_d_cnn_test.py  one_d_cnn_tester.py  one_d_cnn_train.py  ptbdb_test.py  requirements.txt
gemma2b/: doc_converter.py  gemma_2b_it_lora.py  gemma_2b_it_tester.py  lora_adapter_tester.py  lora_converter.py  main.py  requirements.txt  util.py
helm/: milvus-storageclass.yaml  storage.parameters.json  test_connection.py  values.yaml
langchain_test/: langchain_milvus_Collection_loader.ipynb  main.py  main_notebook.ipynb  main_notebook_integrated.ipynb  requirements.txt
langgraph_test/: agent_state_lib.py  langgraph_memory_test.ipynb  langgraph_test.ipynb  language_lib.py  milvus_lib.py  petshop_memory_loader.py  requirements.txt
metaflow_test/: environment.yml  main.py  pyproject.toml  requirements.txt
metaflow_test/metaflow_test/: main.py
metaflow_test/metaflow_test/petshop_memory/: conversation_memory.py  profile_memory.py
metaflow_test/metaflow_test/petshop_memory/database/: test_memory.db
metaflow_test/petshop_memory/: unit_tests.py
milvus_test/: docker-compose.yml  embedded_milvus.py  embedded_notebook.ipynb  embedded_test.py  main.py  milvus_notebook.ipynb  requirements.txt  test.py
open_ai/: environment.yml  test_agent.py
petshopapi/: __init__.py  (+3 more)
(+41 files in other folders)
