[tool.poetry]
name = "metaflow-test"
version = "0.1.0"
description = "metaflow tests and POC"
authors = ["jose valdes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
metaflow = "^2.18.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
